import React from "react";
import { render, fireEvent, waitFor } from "@testing-library/react-native";
import { LanguageSelector } from "@components/LanguageSelector";

// Mock useTaskTranslation
const mockSetLanguage = jest.fn().mockResolvedValue(undefined);
const mockSupportedLanguages = [
  { code: "en", name: "English" },
  { code: "es", name: "Spanish" },
  { code: "ar", name: "Arabic" },
];

const mockUseTaskTranslation = jest.fn(() => ({
  currentLanguage: "en",
  setLanguage: mockSetLanguage,
  supportedLanguages: mockSupportedLanguages,
  ready: true,
}));

jest.mock("@translations/index", () => ({
  useTaskTranslation: () => mockUseTaskTranslation(),
}));

// Mock logger
jest.mock("@utils/serviceLogger", () => ({
  getServiceLogger: jest.fn(() => ({
    debug: jest.fn(),
    error: jest.fn(),
    info: jest.fn(),
  })),
}));

describe("LanguageSelector", () => {
  beforeEach(() => {
    jest.clearAllMocks();
    mockUseTaskTranslation.mockReturnValue({
      currentLanguage: "en",
      setLanguage: mockSetLanguage,
      supportedLanguages: mockSupportedLanguages,
      ready: true,
    });
  });

  // 1. Basic Rendering
  describe("Rendering", () => {
    it("renders with default props", () => {
      const { getByTestId } = render(<LanguageSelector />);
      expect(getByTestId("language-selector")).toBeTruthy();
      expect(getByTestId("language-selector-button")).toBeTruthy();
    });

    it("renders current language name", () => {
      const { getByText } = render(<LanguageSelector />);
      expect(getByText(/English/)).toBeTruthy();
    });

    it("renders with custom style", () => {
      const customStyle = { marginTop: 10 };
      const { getByTestId } = render(<LanguageSelector style={customStyle} />);
      expect(getByTestId("language-selector")).toBeTruthy();
    });

    it("shows loading indicator when changing language", () => {
      const { getByTestId, rerender } = render(<LanguageSelector />);
      // Simulate language change by setting changingLanguage state
      // This would require state management, so we test the ready state instead
      mockUseTaskTranslation.mockReturnValueOnce({
        currentLanguage: "en",
        setLanguage: mockSetLanguage,
        supportedLanguages: mockSupportedLanguages,
        ready: false,
      });
      rerender(<LanguageSelector />);
      expect(getByTestId("language-selector-loading")).toBeTruthy();
    });

    it("shows loading indicator when not ready", () => {
      mockUseTaskTranslation.mockReturnValueOnce({
        currentLanguage: "en",
        setLanguage: mockSetLanguage,
        supportedLanguages: mockSupportedLanguages,
        ready: false,
      });
      const { getByTestId } = render(<LanguageSelector />);
      expect(getByTestId("language-selector-loading")).toBeTruthy();
    });
  });

  // 2. User Interactions
  describe("User Interactions", () => {
    it("opens modal when button is pressed", () => {
      const { getByTestId } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      expect(getByTestId("language-selector-modal")).toBeTruthy();
    });

    it("closes modal when overlay is pressed", () => {
      const { getByTestId, queryByTestId } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      expect(getByTestId("language-selector-modal")).toBeTruthy();
      fireEvent.press(getByTestId("language-selector-modal-overlay"));
      // Modal should close
      // Note: Modal visibility is controlled by state, so we test the close button instead
    });

    it("closes modal when close button is pressed", () => {
      const { getByTestId } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      expect(getByTestId("language-selector-modal-close")).toBeTruthy();
      fireEvent.press(getByTestId("language-selector-modal-close"));
    });

    it("calls setLanguage when language item is pressed", async () => {
      const { getByTestId } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      await waitFor(() => {
        expect(getByTestId("language-selector-item-es")).toBeTruthy();
      });
      fireEvent.press(getByTestId("language-selector-item-es"));
      await waitFor(() => {
        expect(mockSetLanguage).toHaveBeenCalledWith("es");
      });
    });

    it("does not call setLanguage when same language is selected", async () => {
      const { getByTestId } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      await waitFor(() => {
        expect(getByTestId("language-selector-item-en")).toBeTruthy();
      });
      fireEvent.press(getByTestId("language-selector-item-en"));
      // Should not call setLanguage for same language
      expect(mockSetLanguage).not.toHaveBeenCalled();
    });

    it("shows loading when not ready", () => {
      mockUseTaskTranslation.mockReturnValueOnce({
        currentLanguage: "en",
        setLanguage: mockSetLanguage,
        supportedLanguages: mockSupportedLanguages,
        ready: false,
      });
      const { getByTestId } = render(<LanguageSelector />);
      // Button should show loading indicator when not ready
      expect(getByTestId("language-selector-loading")).toBeTruthy();
    });
  });

  // 3. RTL Support
  describe("RTL Support", () => {
    it("renders correctly in LTR mode", () => {
      const { getByTestId } = render(<LanguageSelector />);
      expect(getByTestId("language-selector")).toBeTruthy();
    });

    it("renders correctly in RTL mode", () => {
      mockUseTaskTranslation.mockReturnValueOnce({
        currentLanguage: "ar",
        setLanguage: mockSetLanguage,
        supportedLanguages: mockSupportedLanguages,
        ready: true,
      });
      const { getByTestId } = render(<LanguageSelector />);
      expect(getByTestId("language-selector")).toBeTruthy();
    });

    it("displays RTL language correctly", () => {
      mockUseTaskTranslation.mockReturnValueOnce({
        currentLanguage: "ar",
        setLanguage: mockSetLanguage,
        supportedLanguages: mockSupportedLanguages,
        ready: true,
      });
      const { getByText } = render(<LanguageSelector />);
      expect(getByText(/Arabic/)).toBeTruthy();
    });
  });

  // 4. Edge Cases
  describe("Edge Cases", () => {
    it("handles empty supported languages", () => {
      mockUseTaskTranslation.mockReturnValueOnce({
        currentLanguage: "en",
        setLanguage: mockSetLanguage,
        supportedLanguages: [],
        ready: true,
      });
      const { getByTestId } = render(<LanguageSelector />);
      expect(getByTestId("language-selector")).toBeTruthy();
    });

    it("handles language not found in supported languages", () => {
      mockUseTaskTranslation.mockReturnValueOnce({
        currentLanguage: "fr",
        setLanguage: mockSetLanguage,
        supportedLanguages: mockSupportedLanguages,
        ready: true,
      });
      const { getByTestId } = render(<LanguageSelector />);
      expect(getByTestId("language-selector")).toBeTruthy();
    });

    it("handles setLanguage calls correctly", async () => {
      const { getByTestId } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      await waitFor(() => {
        expect(getByTestId("language-selector-item-es")).toBeTruthy();
      });
      fireEvent.press(getByTestId("language-selector-item-es"));
      // setLanguage should be called
      expect(mockSetLanguage).toHaveBeenCalledWith("es");
    });

    it("handles multiple rapid language changes", async () => {
      const { getByTestId } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      await waitFor(() => {
        expect(getByTestId("language-selector-item-es")).toBeTruthy();
      });
      fireEvent.press(getByTestId("language-selector-item-es"));
      // Should handle rapid changes
      expect(mockSetLanguage).toHaveBeenCalled();
    });
  });

  // 5. Accessibility
  describe("Accessibility", () => {
    it("has proper accessibility label on button", () => {
      const { getByTestId } = render(<LanguageSelector />);
      const button = getByTestId("language-selector-button");
      expect(button.props.accessibilityRole).toBe("button");
      expect(button.props.accessibilityLabel).toContain("Current language");
    });

    it("has proper accessibility label on close button", () => {
      const { getByTestId } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      const closeButton = getByTestId("language-selector-modal-close");
      expect(closeButton.props.accessibilityRole).toBe("button");
      expect(closeButton.props.accessibilityLabel).toBe(
        "Close language selector"
      );
    });

    it("has proper accessibility state on language items", () => {
      const { getByTestId } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      const item = getByTestId("language-selector-item-en");
      expect(item.props.accessibilityRole).toBe("button");
      expect(item.props.accessibilityState.selected).toBe(true);
    });
  });

  // 6. Snapshots
  describe("Snapshots", () => {
    it("matches snapshot with default props", () => {
      const { toJSON } = render(<LanguageSelector />);
      expect(toJSON()).toMatchSnapshot();
    });

    it("matches snapshot with custom style", () => {
      const { toJSON } = render(<LanguageSelector style={{ marginTop: 10 }} />);
      expect(toJSON()).toMatchSnapshot();
    });

    it("matches snapshot with modal open", () => {
      const { getByTestId, toJSON } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      expect(toJSON()).toMatchSnapshot();
    });

    it("matches snapshot when loading", () => {
      mockUseTaskTranslation.mockReturnValueOnce({
        currentLanguage: "en",
        setLanguage: mockSetLanguage,
        supportedLanguages: mockSupportedLanguages,
        ready: false,
      });
      const { toJSON } = render(<LanguageSelector />);
      expect(toJSON()).toMatchSnapshot();
    });

    it("matches snapshot with RTL language", () => {
      mockUseTaskTranslation.mockReturnValueOnce({
        currentLanguage: "ar",
        setLanguage: mockSetLanguage,
        supportedLanguages: mockSupportedLanguages,
        ready: true,
      });
      const { toJSON } = render(<LanguageSelector />);
      expect(toJSON()).toMatchSnapshot();
    });
  });

  // 7. TestIds for E2E
  describe("E2E Support", () => {
    it("has testId on container", () => {
      const { getByTestId } = render(<LanguageSelector />);
      expect(getByTestId("language-selector")).toBeTruthy();
    });

    it("has testId on button", () => {
      const { getByTestId } = render(<LanguageSelector />);
      expect(getByTestId("language-selector-button")).toBeTruthy();
    });

    it("has testId on modal", () => {
      const { getByTestId } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      expect(getByTestId("language-selector-modal")).toBeTruthy();
    });

    it("has testId on language items", () => {
      const { getByTestId } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      expect(getByTestId("language-selector-item-en")).toBeTruthy();
      expect(getByTestId("language-selector-item-es")).toBeTruthy();
    });

    it("has testId on close button", () => {
      const { getByTestId } = render(<LanguageSelector />);
      fireEvent.press(getByTestId("language-selector-button"));
      expect(getByTestId("language-selector-modal-close")).toBeTruthy();
    });
  });
});
